edgedbpkg/_sre/defs/production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "<service-name>"
---

apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "<service-name>"
  namespace: "default"
  labels:
    app: "<service-name>"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "<service-name>"
  template:
    metadata:
      labels:
        app: "<service-name>"
    spec:
      containers:
      - name: "nginx"
        image: "nginx:latest"
        resources:
          requests:
            cpu: "10m"
        readinessProbe:
          httpGet:
            path: /__healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
        volumeMounts:
        - name: csi-gcs-pvc
          mountPath: /srv/www/packages
          readOnly: true
        - name: nginx-conf
          mountPath: /etc/nginx
          readOnly: true
        - name: gpg-pub-keys
          mountPath: /srv/www/keys
          readOnly: true
      volumes:
      - name: csi-gcs-pvc
        persistentVolumeClaim:
          claimName: csi-gcs-pvc
      - name: nginx-conf
        configMap:
          name: "<service-name>-nginx-conf"
      - name: gpg-pub-keys
        secret:
          defaultMode: 0444
          secretName: <service-name>-gpg-pub-keys
---

apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "<service-name>-upload"
  namespace: "default"
  labels:
    app: "<service-name>-upload"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "<service-name>-upload"
  template:
    metadata:
      labels:
        app: "<service-name>-upload"
    spec:
      containers:
      - name: "reprepro"
        image: "gcr.io/edgedb-infra/aptrepo:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        readinessProbe:
          tcpSocket:
            port: 2222
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 2222
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: root-authorized-keys
          readOnly: true
          mountPath: /root/.ssh/
        - name: gpg-keys
          readOnly: true
          mountPath: /root/gpg-keys/
        - name: uploader-authorized-keys
          readOnly: true
          mountPath: /etc/ssh/authorized_keys/
        - name: host-keys
          readOnly: true
          mountPath: /etc/ssh/
        - name: storage-credentials
          readOnly: true
          mountPath: /root/storage-credentials/
        ports:
        - containerPort: 2222

      - name: "rpmrepo"
        image: "gcr.io/edgedb-infra/rpmrepo:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        readinessProbe:
          tcpSocket:
            port: 2223
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 2223
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: root-authorized-keys
          readOnly: true
          mountPath: /root/.ssh/
        - name: gpg-keys
          readOnly: true
          mountPath: /root/gpg-keys/
        - name: uploader-authorized-keys
          readOnly: true
          mountPath: /etc/ssh/authorized_keys/
        - name: host-keys
          readOnly: true
          mountPath: /etc/ssh/
        - name: storage-credentials
          readOnly: true
          mountPath: /root/storage-credentials/
        ports:
        - containerPort: 2223

      - name: "genrepo"
        image: "gcr.io/edgedb-infra/genrepo:latest"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        readinessProbe:
          tcpSocket:
            port: 2224
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 2224
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: root-authorized-keys
          readOnly: true
          mountPath: /root/.ssh/
        - name: gpg-keys
          readOnly: true
          mountPath: /root/gpg-keys/
        - name: uploader-authorized-keys
          readOnly: true
          mountPath: /etc/ssh/authorized_keys/
        - name: host-keys
          readOnly: true
          mountPath: /etc/ssh/
        - name: storage-credentials
          readOnly: true
          mountPath: /root/storage-credentials/
        ports:
        - containerPort: 2224

      volumes:
      - name: root-authorized-keys
        secret:
          defaultMode: 0400
          secretName: <service-name>-ssh-root-authorized-keys
      - name: uploader-authorized-keys
        secret:
          defaultMode: 0444
          secretName: <service-name>-ssh-uploader-authorized-keys
      - name: host-keys
        secret:
          defaultMode: 0400
          secretName: <service-name>-ssh-host-keys
      - name: gpg-keys
        secret:
          defaultMode: 0400
          secretName: <service-name>-gpg-keys
      - name: gpg-pub-keys
        secret:
          defaultMode: 0444
          secretName: <service-name>-gpg-pub-keys
      - name: storage-credentials
        secret:
          secretName: cloudstorage-mount-bot-credentials
          items:
          - key: key
            path: service-account-key.json
---

apiVersion: v1
kind: Service
metadata:
  name: "<service-name>"
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"<service-name>-backend-config"}}'

spec:
  type: NodePort
  selector:
    app: "<service-name>"
  ports:
  - protocol: TCP
    name: http-port
    port: 80
    targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: "<service-name>-upload"
  annotations:
    edbsre.edgedb.com/service.lb-static-ip-name: "<service-name>-upload"
spec:
  type: LoadBalancer
  selector:
    app: "<service-name>-upload"
  ports:
  - protocol: TCP
    name: deb-ssh-port
    port: 2222
    targetPort: 2222
  - protocol: TCP
    name: rpm-ssh-port
    port: 2223
    targetPort: 2223
  - protocol: TCP
    name: generic-ssh-port
    port: 2224
    targetPort: 2224
